--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,7 @@ stages:
         containerRegistry: 'cryxy@docker@hub'
         command: 'login'
     - task: Docker@2
+      displayName: Docker Push
       inputs:
         containerRegistry: 'cryxy@docker@hub'
         repository: 'prosody-extended'
